<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/prop_popup_recovery_password"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_send_code"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp50"
            android:layout_marginBottom="@dimen/dp25"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:text="@string/insert_email"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/popup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:autofillHints=""
            android:background="@drawable/prop_rounded_text"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/dp15"
            android:hint="@string/email"
            android:inputType="text" />

        <TextView
            android:id="@+id/rec_insert_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_ins_email"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/rec_email_inexistent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_inexistent"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/b_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp20"
            android:background="@drawable/prop_rounded_button_green"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="@dimen/sp15"
            android:onClick="pressLog"
            />


        <TextView
            android:id="@+id/b_cancel_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/cancel_operation"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp20"
            android:onClick="pressReg"
            android:textColor="@color/btn_red"/>
    </LinearLayout>
