<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TakePhoto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/backButton"
            android:backgroundTint="@color/palette_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back_activity"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            />

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tp"
            android:paddingRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginStart="@dimen/dp80"
            android:layout_marginLeft="@dimen/dp20"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp20">

        <ImageView
            android:id="@+id/img_tp"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/prop_border_photo"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginBottom="@dimen/dp30"
        android:weightSum="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_camera"
                android:drawableLeft="@drawable/ic_camera"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/take_picture"
                android:textColor="@color/white"
                android:background="@drawable/prop_rounded_button"
                android:onClick="pressCamera"
                android:backgroundTint="@color/palette_two"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/b_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_insert_photo"
                android:drawableLeft="@drawable/ic_insert_photo"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:background="@drawable/prop_rounded_button"
                android:onClick="pressGallery"
                android:backgroundTint="@color/palette_two"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/b_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp20"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:background="@drawable/prop_rounded_button_green"
        android:layout_gravity="center_horizontal"
        android:text="@string/continua"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_arrow_next"
        android:drawableLeft="@drawable/ic_arrow_next"
        android:onClick="pressContinue"/>

</LinearLayout>